# maktaba

./: CMakeLists.txt  build.py
app/: CMakeLists.txt  main.cpp
docs/: uml.md
include/: Author.hpp  Book.hpp
src/: Author.cpp  Book.cpp
tests/: test_Author.cpp  test_Book.cpp
